--- a/lezione 01/index.html
+++ b/lezione 01/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <h1>Prima demo</h1>
-    <script src="index.js"></script>
     <script>
-        console.log(this);
+      //  zsalvatore = 5;
+      //  console.log(this);
+      //  console.log(this);
        // console.log('Hello World');
       //  HelloFunction();
     </script>
+    <script src="novita.js"></script>
 </body>
 </html>
